# ds2-seamless-coop

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  test_client.py
include/: addresses.h  crypto.h  hooks.h  mod.h  network.h  session.h  sync.h  ui.h
launcher/: CMakeLists.txt  installer_gui.cpp
src/: CMakeLists.txt
src/core/: mod.cpp
src/hooks/: game_state_hooks.cpp  network_hooks.cpp  session_hooks.cpp
src/network/: crypto.cpp  packet_handler.cpp  peer_manager.cpp
src/session/: session_manager.cpp
src/sync/: player_sync.cpp  progress_sync.cpp
src/ui/: overlay.cpp  renderer.cpp
